--- a/newtab.css
+++ b/newtab.css
@@ -35,3 +35,13 @@ body {
     margin: 0px 10px 10px 10px;
     text-shadow: 0px 3px 4px black;
 }
+
+#weather{
+    position: absolute; 
+    top: 10px; 
+    right: 10px; 
+    font-size: 18px;
+    font-family: monospace;
+    text-shadow: 0px 3px 4px black;
+    font-weight: bold;
+}
